--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Brownlows Bets"
-author: "Put your name here!"
-date: "put the date here"
+author: "Calvin Madrigal"
+date: "4-26-18"
 output: html_document: default
  ---
 
@@ -12,6 +12,11 @@ output: html_document: default
 <!--In this section you explain what you are trying to show.  Where did the data come from?  What is the research or other question you are trying to answer?!-->
 
  At the first day of class there are 35 students in Math Statistics class and professor Brownlow always proposes this bet to his students "I will wager $2 to your bet of $1 that at least two people in today's class have  the same birthday.  He tells me he has made that bet 1137 times so far. Where do you think his profits are? Discuss this in a markdown document
+
+```{r, include=FALSE}
+require(tigerstats)
+```
+
 
 # Methods
 
