--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -17,6 +17,23 @@ output: html_document: default
 
 <!--Decide on your methods:  In this section explain the approach you will take to attack the issue --- how will you decide on a likely estimate of professor Brownlow's earnings or losses after 1137 bets. Also explain how you construct a 95% confidence interval about your estimate of his winnings !-->
 
+```{r}
+ansarray<-numeric()
+for (j in 1:100){
+brownProfit = 0
+bdays <- (1:365)
+for (i in 1:1137){
+students <- sample(bdays,size = 35, replace = TRUE)
+xx <- duplicated(students)
+winornot <- sum(xx)
+if (winornot >= 1) brownProfit = brownProfit+1 else brownProfit = brownProfit -2
+}
+ansarray[j]=brownProfit
+}
+hist(ansarray)
+```
+
+The approach is to create a looping code which randomly creates 35 people with a random birthday within the 365 possible days, and have that loop repeat itself  1137 times. This would randomly come out with outcomes to whether two students had the same birthday or not and adding 1 to profit if they did while subtracting 2 if they didn't.
 
 #Profit Estimate
 
